@@ -106,7 +106,7 @@ RUN apt-get update \
   && echo 'deb-src https://deb.nodesource.com/node_6.x jessie main' >> /etc/apt/sources.list.d/nodesource.list \
   && apt-get update \
   && apt-get install nodejs \
-  && npm install -g yarn \
+  && npm install -g yarn eslint \
   && npm cache clean --force \
   && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
